# avtse_cursor

./: .gitignore  README.md  _pcm_to_wav.py  av_stream_inference.py  convert_av_mossformer_rknn.py  est_mask.npy  eval_face_metrics.py  export_jit.py  export_onnx.py  face_mediapipe_tracker.py  main.py  networks.py  requirements-infer-only.txt  stream_inference_SDK.py  test_onnx_inference.py
asr_frontend/: CMakeLists.txt  README.md
asr_frontend/docs/: RK3588_ANDROID_RKNN.md
asr_frontend/examples/: smoke_main.cpp
asr_frontend/include/asr_frontend/: asr_frontend_api.hpp  audio_resampler.hpp  dfsmn_aec_config.hpp  dfsmn_aec_onnx.hpp  dfsmn_aec_rknn.hpp  onnx_runtime_setup.hpp  rknn_session.hpp  stream_buffer_2d.hpp  stream_inference.hpp  zipenhancer_full_onnx.hpp  zipenhancer_full_rknn.hpp
asr_frontend/scripts/: README_MODELS.txt  build_android_rk3588.sh  convert_dfsmn_aec_rknn.py  convert_zipenhancer_rknn.py  onnx_patch_dfsmn_for_rknn.py  rknn_mem_guard.py
asr_frontend/src/: asr_frontend_api.cpp  audio_resampler.cpp  dfsmn_aec_onnx.cpp  dfsmn_aec_rknn.cpp  rknn_session.cpp  stream_buffer_2d.cpp  stream_inference.cpp  zipenhancer_full_onnx.cpp  zipenhancer_full_rknn.cpp
asr_frontend/tests/: test_stream_buffer.cpp
av_tse/: CMakeLists.txt  README.md
av_tse/docs/: RK3588_ANDROID_RKNN.md
av_tse/examples/: caseb_main.cpp  smoke_main.cpp
av_tse/include/av_tse/: audio_resampler.hpp  av_align.hpp  av_mossformer_inference.hpp  av_mossformer_onnx.hpp  av_mossformer_ref_onnx.hpp  av_mossformer_rknn.hpp  av_mossformer_split.hpp  av_mossformer_warmup.inl  av_stream_inference.hpp  av_tse_config.hpp  caseb_runner.hpp  face_haar_tracker.hpp  incremental_video_resampler.hpp  stream_inference_sdk.hpp
av_tse/scripts/: README_MODELS.txt  build_android_caseb.sh  build_android_rk3588.sh  build_opencv_android.sh  convert_av_mossformer_rknn.py
av_tse/src/: audio_resampler.cpp  av_align.cpp  av_mossformer_onnx.cpp  av_mossformer_ref_onnx.cpp  av_mossformer_rknn.cpp  av_mossformer_split.cpp  av_stream_inference.cpp  av_tse_config.cpp  caseb_common.cpp  face_haar_tracker.cpp  incremental_video_resampler.cpp  stream_inference_sdk.cpp
checkpoints/AV_Mossformer/: config.yaml
checkpoints/AV_Mossformer/rknn_calib_sep/: dataset.txt
checkpoints/AV_Mossformer/rknn_calib_src_200/: manifest.csv
docs/: RKNN_BUILD_PHASE_BC.md
models/av_mossformer2_tse/: av_mossformer2.py  visual_frontend.py
models/av_mossformer2_tse/mossformer/utils/: Transformer.py  conv_module.py  fsmn.py  normalization.py  one_path_flash_fsmn.py  rotary_emb_rknn.py
scripts/: build_rknn_sep_calib.py  diagnose_sep_onnx_rknn.py  rknn_hybrid_infer.py  verify_einsum_replacement.py  verify_split_deploy.py
测试用例/face_gt/: README.md  manual_scores.csv
脚本/: _calc_sisdr.py  _real_sisdr.py  batch_asr.py  facedetection.py  weights_only.py
读文件脚本/: README.md  prepare_chunk_input.py
